--- a/prd-dev.html
+++ b/prd-dev.html
@@ -1234,11 +1234,11 @@
                                     Development</a>
                                 <a href="./mobapp-dev.html" class="dropdown-item">Mobile Application
                                     Development</a>
-                                <a href="services-web-apps.html" class="dropdown-item">Web Application Development</a>
-                                <a href="services-automation.html" class="dropdown-item">Business Process Automation</a>
-                                <a href="services-consultancy.html" class="dropdown-item">Tech Consultancy</a>
-                                <a href="services-partnership.html" class="dropdown-item">Tech Partnership</a>
-                                <a href="services-enterprise.html" class="dropdown-item">Enterprise Applications</a>
+                                <a href="#" class="dropdown-item">Web Application Development</a>
+                                <a href="#" class="dropdown-item">Business Process Automation</a>
+                                <a href="#" class="dropdown-item">Tech Consultancy</a>
+                                <a href="#" class="dropdown-item">Tech Partnership</a>
+                                <a href="#" class="dropdown-item">Enterprise Applications</a>
 
                             </div>
                         </div>
