--- a/index.html
+++ b/index.html
@@ -1622,7 +1622,7 @@
                         <div class="service-title">Enterprise CRM Development</div>
                         <div class="service-text">Lorem ipsum dummy text of printing and typesetting industry.</div>
 
-                        <a
+                        <a href="software-development.html"
                             class="inline-block mt-2 text-[#2980b9] text-[14px] font-bold hover:underline cursor-pointer">
                             Learn More →
                         </a>
@@ -1636,7 +1636,7 @@
                         <div class="service-title">Enterprise EMS</div>
                         <div class="service-text">Lorem ipsum dummy text of printing and typesetting industry.</div>
 
-                        <a
+                        <a href="#"
                             class="inline-block mt-2 text-[#2980b9] text-[14px] font-bold hover:underline cursor-pointer">
                             Learn More →
                         </a>
@@ -1678,7 +1678,7 @@
                         <div class="service-title">Mobile App Development</div>
                         <div class="service-text">Lorem ipsum dummy text of printing and typesetting industry.</div>
 
-                        <a
+                        <a href="mobapp-dev.html"
                             class="inline-block mt-2 text-[#2980b9] text-[14px] font-bold hover:underline cursor-pointer">
                             Learn More →
                         </a>
