changing for nav bar

--- a/index.html
+++ b/index.html
@@ -1340,18 +1340,14 @@
 
                             <div class="flex flex-col gap-2">
 
-                                <a href="./software-development.html" class="dropdown-item">Customized Solutions</a>
-                                <a href="./IBS.html" class="dropdown-item">Integrated Business
-                                    Solutions</a>
-                                <a href="./prd-dev.html" class="dropdown-item">Product Design &
-                                    Development</a>
-                                <a href="./mobapp-dev.html" class="dropdown-item">Mobile Application
-                                    Development</a>
-                                <a href="#" class="dropdown-item">Web Application Development</a>
-                                <a href="#" class="dropdown-item">Business Process Automation</a>
-                                <a href="#" class="dropdown-item">Tech Consultancy</a>
-                                <a href="#" class="dropdown-item">Tech Partnership</a>
-                                <a href="#" class="dropdown-item">Enterprise Applications</a>
+                                <a href="./ERP-Enterprices.html" class="dropdown-item">Enterprise Applications</a>
+                                <a href="./Enterprise-CRM-Development.html" class="dropdown-item">Enterprise CRM Development</a>
+                                <a href="./Custome-Web-Application.html" class="dropdown-item">Custom Web Applications</a>
+                                <a href="./mobapp-development.html" class="dropdown-item">Mobile Application Development</a>
+                                <a href="./UI-UX.html" class="dropdown-item">UI UX</a>
+                                <a href="./AI-Integration-Automation.html" class="dropdown-item">AI Integration & Automation</a>
+                                <a href="./WordPress-Websites.html" class="dropdown-item">WordPress Websites</a>
+                                <a href="./Tech-Consultancy.html" class="dropdown-item">Tech Consultancy</a>
 
                             </div>
                         </div>
@@ -1404,49 +1400,44 @@
                     <!-- DROPDOWN CONTENT -->
                     <div id="mobileDropdown" class="mt-3 ml-4 hidden flex-col space-y-2">
 
-                        <a href="./software-development.html"
+                        <a href="./ERP-Enterprices.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            Customized Solutions
+                            Enterprise Applications
                         </a>
 
-                        <a href="./IBS.html"
+                        <a href="./Enterprise-CRM-Development.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            Integrated Business Solutions
+                            Enterprise CRM Development
                         </a>
 
-                        <a href="./prd-dev.html"
+                        <a href="./Custome-Web-Application.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            Product Design & Development
+                            Custom Web Applications
                         </a>
 
-                        <a href="./mobapp-dev.html"
+                        <a href="./mobapp-development.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
                             Mobile Application Development
                         </a>
 
-                        <a href="#"
+                        <a href="UI-UX.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            Web Application Development
+                            UI UX
                         </a>
 
-                        <a href="#"
+                        <a href="AI-Integration-Automation.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            Business Process Automation
+                            AI Integration & Automation
                         </a>
 
-                        <a href="#"
+                        <a href="WordPress-Websites.html"
+                            class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
+                            WordPress Websites
+                        </a>
+
+                        <a href="Tech-Consultancy.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
                             Tech Consultancy
-                        </a>
-
-                        <a href="#"
-                            class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            Tech Partnership
-                        </a>
-
-                        <a href="#"
-                            class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            Enterprise Applications
                         </a>
                     </div>
                 </div>
