Replace UI UX to UI/UX

--- a/services.html
+++ b/services.html
@@ -226,7 +226,7 @@
                                 <a href="./Enterprise-CRM-Development.html" class="dropdown-item">Enterprise CRM Development</a>
                                 <a href="./Custome-Web-Application.html" class="dropdown-item">Custom Web Applications</a>
                                 <a href="./mobapp-development.html" class="dropdown-item">Mobile Application Development</a>
-                                <a href="./UI-UX.html" class="dropdown-item">UI UX</a>
+                                <a href="./UI-UX.html" class="dropdown-item">UI/UX</a>
                                 <a href="./AI-Integration-Automation.html" class="dropdown-item">AI Integration & Automation</a>
                                 <a href="./WordPress-Websites.html" class="dropdown-item">WordPress Websites</a>
                                 <a href="./Tech-Consultancy.html" class="dropdown-item">Tech Consultancy</a>
@@ -304,7 +304,7 @@
 
                         <a href="UI-UX.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            UI UX
+                            UI/UX
                         </a>
 
                         <a href="AI-Integration-Automation.html"
