--- a/Tech-Consultancy.html
+++ b/Tech-Consultancy.html
@@ -1232,7 +1232,7 @@
                                 <a href="./Enterprise-CRM-Development.html" class="dropdown-item">Enterprise CRM Development</a>
                                 <a href="./Custome-Web-Application.html" class="dropdown-item">Custom Web Applications</a>
                                 <a href="./mobapp-development.html" class="dropdown-item">Mobile Application Development</a>
-                                <a href="./UI-UX.html" class="dropdown-item">UI UX</a>
+                                <a href="./UI-UX.html" class="dropdown-item">UI/UX</a>
                                 <a href="./AI-Integration-Automation.html" class="dropdown-item">AI Integration & Automation</a>
                                 <a href="./WordPress-Websites.html" class="dropdown-item">WordPress Websites</a>
                                 <a href="#" class="dropdown-item">Tech Consultancy</a>
