--- a/industries.html
+++ b/industries.html
@@ -626,7 +626,7 @@
                                     Applications</a>
                                 <a href="./mobapp-development.html" class="dropdown-item">Mobile Application
                                     Development</a>
-                                <a href="./UI-UX.html" class="dropdown-item">UI UX</a>
+                                <a href="./UI-UX.html" class="dropdown-item">UI/UX</a>
                                 <a href="./AI-Integration-Automation.html" class="dropdown-item">AI Integration &
                                     Automation</a>
                                 <a href="./WordPress-Websites.html" class="dropdown-item">WordPress Websites</a>
@@ -705,7 +705,7 @@
 
                         <a href="UI-UX.html"
                             class="block text-gray-700 hover:text-blue-600 p-2 hover:bg-gray-100 rounded-lg transition">
-                            UI UX
+                            UI/UX
                         </a>
 
                         <a href="AI-Integration-Automation.html"
